...
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.SmartReceipts.TextView.FragmentTitle"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@string/report_info_generate" />

            <TextView
                android:id="@+id/generate_report_tooltip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
...
                android:textSize="13sp" />


            <FrameLayout style="@style/Widget.SmartReceipts.GenerateCheckBoxContainer">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/dialog_email_checkbox_pdf_full"
                    style="@style/Widget.SmartReceipts.GenerateCheckBox"
                    android:text="@string/DIALOG_EMAIL_CHECKBOX_PDF_FULL"
                    app:drawableEndCompat="@drawable/ic_pdf" />
            </FrameLayout>

            <FrameLayout style="@style/Widget.SmartReceipts.GenerateCheckBoxContainer">

                <CheckBox
                    android:id="@+id/dialog_email_checkbox_pdf_images"
                    style="@style/Widget.SmartReceipts.GenerateCheckBox"
                    android:text="@string/DIALOG_EMAIL_CHECKBOX_PDF_IMAGES"
                    app:drawableEndCompat="@drawable/ic_pdf" />
            </FrameLayout>

            <FrameLayout style="@style/Widget.SmartReceipts.GenerateCheckBoxContainer">

                <CheckBox
                    android:id="@+id/dialog_email_checkbox_csv"
                    style="@style/Widget.SmartReceipts.GenerateCheckBox"
                    android:text="@string/DIALOG_EMAIL_CHECKBOX_CSV"
                    app:drawableEndCompat="@drawable/ic_csv" />
            </FrameLayout>

            <FrameLayout style="@style/Widget.SmartReceipts.GenerateCheckBoxContainer">

                <CheckBox
                    android:id="@+id/dialog_email_checkbox_zip"
                    style="@style/Widget.SmartReceipts.GenerateCheckBox"
                    android:text="@string/DIALOG_EMAIL_CHECKBOX_ZIP"
                    app:drawableEndCompat="@drawable/ic_zip" />
            </FrameLayout>

            <FrameLayout style="@style/Widget.SmartReceipts.GenerateCheckBoxContainer">

                <CheckBox
                    android:id="@+id/dialog_email_checkbox_zip_with_metadata"
                    style="@style/Widget.SmartReceipts.GenerateCheckBox"
                    android:text="@string/DIALOG_EMAIL_CHECKBOX_ZIP_WITH_METADATA"
                    app:drawableEndCompat="@drawable/ic_zip" />

            </FrameLayout>

...
