...
    <string name="pdf">PDF</string>
    <string name="rename">Rename</string>
    <string name="report">Report</string>
    <string name="report_attached">1 report attached</string>
    <string name="reports_attached">%s reports attached</string>
    <string name="save">Save</string>
    <string name="send_email">Send File&#8230;</string>
    <string name="support">%s - Support</string>
    <string name="total">Total</string>
    <string name="undefined">Undefined</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="yes_as_pdf">Yes - As PDF</string>
...
    <string name="report_pdf_generation_error">There was an error generating the report</string>
    <string name="report_pdf_error_too_many_columns_title">Too many columns</string>
    <string name="report_pdf_error_too_many_columns_message">There is not enough space to fit all the columns in the report. Please try limiting the number of columns in Settings.</string>
    <string name="report_pdf_error_too_many_columns_message_landscape">There is not enough space to fit all the columns in the report. Please try limiting the number of columns in Settings or use landscape mode.</string>
    <string name="report_pdf_error_go_to_settings">Go to settings</string>
    <string name="report_error_memory">Error: Not enough memory to stamp the images. Try stopping some other apps and try again.</string>
    <string name="report_error_undetermined">Something went wrong while generating reports…</string>

    <!-- ===================== ocr ======================== -->
    <string name="ocr_informational_tooltip_configure_text">[Optional] Configure Automatic Scans? Tap here.</string>
    <plurals name="ocr_informational_tooltip_limited_scans_text">
        <item quantity="one">%d Scan Remaining. Tap for more.</item>
        <item quantity="other">%d Scans Remaining. Tap for more.</item>
...

    <!-- ================== Trip Adapter ===================== -->
    <string name="trip_adapter_list_item_to">%1$s ➝ %2$s</string>
    <string name="trip_no_data">You don\'t seem to have any reports defined at the moment. Try clicking the "+" (plus) button to get started.</string>

    <!-- ================= Receipt Adapter =================== -->
    <string name="receipt_no_data">You don\'t seem to have any receipts yet. Try tapping the "+" (plus) button to get started&#8230;</string>

    <!-- ================= Distance Adapter ================== -->
    <string name="distance_no_data">You don\'t seem to have any distance tracked yet. Try clicking the "+" (plus) button to get started.</string>
    <string name="distance_insert_failed">Error: Failed to create this distance item. Please make sure your phone is not mounted to your computer.</string>
    <string name="distance_update_failed">Error: Failed to update this distance item. Please make sure your phone is not mounted to your computer.</string>
    <string name="distance_delete_failed">Error: Failed to delete this distance item. Please make sure your phone is not mounted to your computer.</string>
...
    <!-- ================== DIALOG_EMAIL ===================== -->
    <string name="DIALOG_EMAIL_CHECKBOX_PDF_FULL">Full PDF Report</string>
    <string name="DIALOG_EMAIL_CHECKBOX_PDF_IMAGES">PDF Report - No Table</string>
    <string name="DIALOG_EMAIL_CHECKBOX_CSV">CSV File</string>
    <string name="DIALOG_EMAIL_CHECKBOX_ZIP_WITH_METADATA">ZIP - Receipt Files with Metadata</string>
    <string name="DIALOG_EMAIL_CHECKBOX_ZIP">ZIP - Receipts Files</string>
    <string name="DIALOG_EMAIL_TOAST_NO_SELECTION">Please Check At Least One Report</string>
    <string name="DIALOG_EMAIL_TOAST_NO_RECEIPTS">There are No Receipts in this Report</string>
    <string name="generate_report_tooltip">Tap to configure the report layouts</string>
    <string name="generate_report_subtitle">Choose what to generate</string>

    <!-- ================= DIALOG_SETTINGS =================== -->


...
